--- a/ares2024.ioc
+++ b/ares2024.ioc
@@ -9,7 +9,36 @@ CAN1.CalculateTimeQuantum=71.42857142857143
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1
 CAN1.Prescaler=3
 Dma.Request0=USART1_RX
-Dma.RequestsNb=1
+Dma.Request1=USART6_TX
+Dma.Request2=SDIO_RX
+Dma.Request3=SDIO_TX
+Dma.RequestsNb=4
+Dma.SDIO_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO_RX.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_RX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_RX.2.Instance=DMA2_Stream3
+Dma.SDIO_RX.2.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_RX.2.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_RX.2.Mode=DMA_PFCTRL
+Dma.SDIO_RX.2.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDIO_TX.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_TX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_TX.3.Instance=DMA2_Stream6
+Dma.SDIO_TX.3.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_TX.3.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_TX.3.Mode=DMA_PFCTRL
+Dma.SDIO_TX.3.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.SDIO_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART1_RX.0.Instance=DMA2_Stream2
@@ -20,9 +49,20 @@ Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART6_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_TX.1.Instance=DMA2_Stream7
+Dma.USART6_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART6_TX.1.Mode=DMA_NORMAL
+Dma.USART6_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART6_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.BSP.number=1
-FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN
-FATFS.USE_DMA_CODE_SD=0
+FATFS.IPParameters=USE_DMA_CODE_SD,_USE_LFN,_MAX_SS
+FATFS.USE_DMA_CODE_SD=1
+FATFS._MAX_SS=512
 FATFS._USE_LFN=2
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
@@ -87,6 +127,9 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.CAN1_RX1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -224,6 +267,8 @@ RCC.VCOSAIOutputFreq_Value=98000000
 RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
+SDIO.ClockDiv=4
+SDIO.IPParameters=ClockDiv
 USART1.BaudRate=100000
 USART1.IPParameters=VirtualMode,Parity,BaudRate,WordLength,Mode
 USART1.Mode=MODE_RX
@@ -239,3 +284,4 @@ VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim14.Mode=TIM14
 VP_SYS_VS_tim14.Signal=SYS_VS_tim14
 board=SDCard
+rtos.0.ip=FREERTOS
